# Chained-Decos

./: .clang-format  .clangd  .gitignore  .gitmodules  .ninja_deps  .ninja_log  AGENTS.md  CHProfiling-Startup.json  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  SOLID_IMPROVEMENTS.md  add_noclip_interface.py  add_onrender.py  build.ninja  build_error.txt  build_log.txt  build_output.txt  build_verbose.txt  clean_and_configure.bat  cmake_output.txt  compile_commands.json  cpackconfig.cmake  create_dist.ps1  editor_settings.yaml  fix_callers.py  fix_cmakelists.py  fix_double_render.py  fix_game_app_style.py  fix_inheritance_and_const.py  fix_inline_methods.py  fix_levelmanager_cast.py  fix_menu_glfw.ps1  fix_menu_levelmanager.py  fix_menu_style.py  fix_modulemanager.py  fix_movement_member.py  fix_other_signatures.py  (+43 more)
benchmarks/: CMakeLists.txt  PerformanceBenchmark.cpp
components/: CMakeLists.txt  servers.h
components/audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt
components/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
components/physics/: Physics.cpp  Physics.h
components/rendering/: CMakeLists.txt  RenderManager.cpp  RenderManager.h
core/: Application.h  Base.h  CMakeLists.txt  Engine.cpp  Engine.h  Log.h  ServiceRegistry.h  core.h  macros.h  test_macros.cpp
core/application/: Application.cpp  Application.h  EngineApplication.cpp  EngineApplication.h  EntryPoint.h  IApplication.h  entry_point.h
core/assets/: AssetManager.cpp  AssetManager.h  asset_manager.cpp  asset_manager.h
core/audio/: Audio.cpp  Audio.h
core/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  GameConfig.cpp  GameConfig.h  config_manager.cpp  config_manager.h  game_config.cpp  game_config.h
core/ecs/: CMakeLists.txt  Components.h  ECSRegistry.cpp  ECSRegistry.h  Entity.h  Examples.cpp  Examples.h  Systems.h
core/engine/: Application.h  Base.h  Engine.cpp  Engine.h  EngineApplication.cpp  EngineApplication.h  IApplication.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Types.h
core/events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  EventBus.h  GameEvents.h  KeyEvent.cpp  KeyEvent.h  MenuEvent.h  MouseEvent.cpp  MouseEvent.h
core/gui/: CMakeLists.txt  GUIContext.cpp  GUIContext.h  GUIStyle.h  ImGuiLayer.cpp
core/imgui/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_layer.cpp  imgui_layer.h
core/input/: Input.cpp  Input.h
core/interfaces/: IEngine.h  IEngineModule.h  IGuiManager.h  ILevelManager.h  IMenu.h  IModule.h  IPlayer.h  IService.h  IServiceProvider.h  ITransformable.h  IUpdatable.h  Interfaces.h
core/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  layer_stack.cpp  layer_stack.h
core/module/: ModuleManager.cpp  ModuleManager.h
core/object/: Object.cpp  Object.h
core/physics/: Physics.cpp  Physics.h
core/renderer/: Buffer.cpp  Buffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  opengl_shader.cpp  renderer_api.cpp
core/scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h  ScriptManagerImpl.cpp  script_manager.h  script_manager_impl.cpp
core/services/: CoreServices.cpp  CoreServices.h
core/utils/: Base.h  Types.h  core.h
core/window/: Window.cpp  Window.h
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorLayer.cpp  EditorLayer.h  EditorTypes.h  IEditor.h  editor.cpp  editor.h  editor_application.cpp  editor_application.h  editor_context.cpp  editor_context.h  editor_events.h  editor_gui.cpp  editor_gui.h  editor_layer.cpp  editor_layer.h  editor_layer_events.cpp  editor_layout.cpp  editor_layout.h  editor_main.cpp  editor_panels.cpp  editor_panels.h  editor_settings.cpp  editor_settings.h  editor_types.h  editor_utils.cpp  editor_utils.h  inspector_panel.cpp  inspector_panel.h  main.cpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
editor/actions/: editor_actions.cpp  editor_actions.h  project_actions.cpp  project_actions.h  scene_actions.h  (+2 more)
engine/: CMakeLists.txt  application.cpp  application.h  asset_manager.cpp  asset_manager.h  base.h  components.h  entity.h  entry_point.h  input.h  layer.h  layer_stack.h  physics.cpp  physics.h  project.h  project_serializer.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_serializer.cpp  types.h
events/: ApplicationEvent.cpp  ApplicationEvent.h  CMakeLists.txt  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MenuEvent.h  MouseEvent.cpp  MouseEvent.h  UIEventRegistry.h  application_event.cpp  menu_event.h  ui_event_registry.h
game/: CMakeLists.txt
map_editor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  main.cpp
mapeditor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorTypes.h  IEditor.h  imgui.ini  main.cpp
platform/: CMakeLists.txt
project/: CMakeLists.txt  GameApplication.cpp  GameApplication.h  Project.cpp  Project.h  map.json  project.cdproj
runtime/: CMakeLists.txt  RuntimeApplication.cpp  RuntimeApplication.h  RuntimeLayer.cpp  RuntimeMain.cpp  runtime_application.cpp  runtime_application.h  runtime_generic_entry.cpp  runtime_layer.cpp  runtime_layer.h  runtime_main.cpp
scene/: CMakeLists.txt  MapManager.cpp  MapManager.h  SceneManager.cpp  SceneManager.h
scripting/: CMakeLists.txt  scene_scripting.cpp  scene_scripting.h  script_file_system.h  script_glue.cpp  script_glue.h  scriptengine.cpp  scriptengine.h
tests/: CMakeLists.txt  README.md  asset_manager_tests.cpp  audio_tests.cpp  event_input_tests.cpp  gtest.cpp  hierarchy_tests.cpp  importer_tests.cpp  integration_tests.cpp  material_tests.cpp  math_tests.cpp  physics_tests.cpp  primitive_tests.cpp  renderer_tests.cpp  run_tests.bat  run_tests.sh  scene_serialization_tests.cpp  scene_tests.cpp  serialization_tests.cpp  test_config.json  test_environment.cpp  uuid_tests.cpp
(+3658 files in other folders)
